--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "api"
     ],
     "homepage": "https://developer.bigcommerce.com/api/v3/",
-    "license": "Apache v2",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "Bigcommerce",
